[package]
name = "hord3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.4"
minifb = "0.26.0"
entity_derive = { path = "entity_derive" }
engine_derive = { path = "engine_derive" }
task_derive = { path = "task_derive" }
to_from_bytes = { path = "to_from_bytes" }
to_from_bytes_derive = { path = "to_from_bytes/to_from_bytes_derive"}
threading_utils = { path = "threading_utils" }
image = "0.23.14"
fastrand = "2.1.1"
cosmic-text = "0.12.1"
rodio = "0.19.0"
winit = "0.30.5"
softbuffer = "0.4.6"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
debug = true
target = "native"
# panic = "abort"